--- a/css/my_css/homepage.scss
+++ b/css/my_css/homepage.scss
@@ -1,8 +1,6 @@
 @import "mixins";
 
 
-
-
 $menu_border_radius: 16px;
 $menu_padding_value: 8px;
 
@@ -66,6 +64,7 @@ html
                         position: fixed;
         
                         width: 100%;
+                        height: 100%;
 
                         filter: blur(4px);
         
@@ -90,7 +89,8 @@ html
                         padding-top: $menu_padding_value;
                         padding-bottom: $menu_padding_value;
 
-                        background-color: $black_blue;
+                        background: rgb(15,29,46);
+                        background: linear-gradient(0deg, rgba(15,29,46,1) 0%, rgba(0,0,0,1) 100%);
                         color: $main_color;
 
                         z-index: 10;
@@ -130,6 +130,9 @@ html
         
                                 border-style: none;
                                 border-radius: 100%;
+
+                                background-color: $light_blue;
+                                color: $dark_blue;
         
                                 font-size: 1.6rem;
         
@@ -301,7 +304,9 @@ html
                                         a:active
                                         {
                                                 background-color: $light_blue;
-                                                color: $red;
+                                                color: $purple;
+
+                                                font-size: 1.25rem;
         
                                                 transition: 100ms all;
                                         }
@@ -364,9 +369,46 @@ html
                 {
                         @extend %flexbox;
                         
-                        height: 89px;
+                        height: 121px;
 
                         z-index: -15;
+                }
+
+
+
+
+                .div_track_time_info
+                {
+                        @extend %flexbox;
+                        justify-content: space-between;
+                        align-content: flex-start;
+
+                        bottom: 0;
+                        left: 0;
+                        right: 0;
+                        position: fixed;
+
+                        height: 121px;
+
+                        background: rgb(39,76,119);
+                        background: linear-gradient(90deg, rgba(39,76,119,1) 0%, rgba(39,76,119,0) 50%, rgba(39,76,119,1) 100%);
+                        color: $light_blue;
+
+                        z-index: 5;
+
+                        .current_time,
+                        .duration_time
+                        {
+                                margin-top: 7px;
+                                margin-left: 0.5rem;
+
+                                font-weight: bold;
+                        }
+
+                        .duration_time
+                        {
+                                margin-right: 0.5rem;
+                        }
                 }
 
 
@@ -387,10 +429,11 @@ html
 
                         margin-bottom: 3.8rem;
 
-                        background-color: $dark_grey;
+                        background-color: $dark_blue;
                         color: $main_color;
 
                         cursor: pointer;
+                        z-index: 7;
 
                         .progress_bar
                         {
@@ -399,7 +442,8 @@ html
 
                                 border-radius: 1rem;
 
-                                @extend %gradient;
+                                background: rgb(39,76,119);
+                                background: linear-gradient(90deg, rgba(39,76,119,1) 0%, rgba(163,206,241,1) 100%);
 
                                 transition: width 0.1s linear;
                         }
@@ -426,7 +470,8 @@ html
                         border-top-left-radius: $menu_border_radius;
                         border-top-right-radius: $menu_border_radius;
 
-                        background-color: $black_blue;
+                        background: rgb(15,29,46);
+                        background: linear-gradient(180deg, rgba(15,29,46,1) 0%, rgba(0,0,0,1) 100%);
 
                         z-index: 10;
 
@@ -517,9 +562,6 @@ html
         .body
         {
                 justify-content: flex-end;
-                align-items: stretch;
-                align-content: stretch;
-                align-self: center;
 
                 .div_video
                 {
@@ -531,7 +573,7 @@ html
                         right: 0;
                         position: fixed;
 
-                        z-index: -1;
+                        z-index: -10;
 
                         video
                         {
@@ -547,20 +589,41 @@ html
                         min-width: 320px;
                         max-width: 25%;
 
+                        .background_image,
                         .div_current_track_playing_info,
-                        .div_main_controls,
+                        .div_track_time_info,
                         .div_track_progress,
-                        .background_image
+                        .div_main_controls
                         {
+                                left: unset;
+
                                 min-width: 320px;
                                 max-width: 25%;
-                                left: unset;
                         }
 
                         .background_image
                         {
                                 height: 100%;
-                                z-index: -1;
+
+                                z-index: -10;
+                        }
+
+                        .div_info_about_website
+                        {
+                                margin-top: 80px;
+
+                                .btn_info,
+                                i
+                                {
+                                        bottom: 1rem;
+                                        left: 1rem;
+                                        position: fixed;
+
+                                        width: 2rem;
+                                        height: 2rem;
+
+                                        font-size: 2.3rem;
+                                }
                         }
                 }
         }
